--- a/pages/2570.html
+++ b/pages/2570.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8388/#Item_22" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8388/#Item_23" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -563,7 +563,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#GramSchmidtOnHilbertSpaces'>Gram–Schmidt process on Hilbert spaces</a></li>
-<li><a href='#via_gaussian_elimination'>Via Gaussian elimination</a></li>
+<li><a href='#ViaGaussianElimination'>Via Gaussian elimination</a></li>
 <li><a href='#examples'>Examples</a></li>
 <ul>
 <li><a href='#legendre_polynomials'>Legendre polynomials</a></li>
@@ -600,13 +600,11 @@ margin-left: 0em;
 <p>If we apply the Gram–Schmidt process to a well-ordered independent set whose closed linear span <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math> is <em>not</em> all of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>, we still get an orthonormal basis of the subspace <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math>. If we apply the Gram–Schmidt process to a dependent set, then we will eventually run into a vector <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>v</mi></mrow><annotation encoding="application/x-tex">v</annotation></semantics></math> whose norm is zero, so we will not be able to take <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">N(v)</annotation></semantics></math>. In that case, however, we can simply remove <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>v</mi></mrow><annotation encoding="application/x-tex">v</annotation></semantics></math> from the set and continue; then we will still get an orthonormal basis of the closed linear span. (This conclusion is not generally valid in <a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a>, since it relies on <a class="existingWikiWord" href="/nlab/show/excluded+middle">excluded middle</a> applied to the statement that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">‖</mo><mi>v</mi><mo stretchy="false">‖</mo><mo>≠</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\|v\| \neq 0</annotation></semantics></math>. However, it does work to <a class="existingWikiWord" href="/nlab/show/discrete+fields">discrete fields</a>, such as the algebraic closure of the rationals, as seen in elementary undergraduate linear algebra.)</p>
 </div>
 
-<h2 id="via_gaussian_elimination">Via Gaussian elimination</h2>
+<h2 id="ViaGaussianElimination">Via Gaussian elimination</h2>
 
-<p>There is an alternative algorithm via <span class="newWikiWord">Gaussian elimination<a href="/nlab/new/Gaussian+elimination">?</a></span> which for a set of vectors produces an orthogonal basis for its linear span (<a href="#PursellTrimble91">Pursell-Trimble 91</a>).</p>
+<p>There is an alternative algorithm via <a class="existingWikiWord" href="/nlab/show/Gaussian+elimination">Gaussian elimination</a> which for a set of vectors produces an orthogonal basis for its linear span (<a href="#PursellTrimble91">Pursell-Trimble 91</a>).</p>
 
 <p>In the special case that the original vectors are linearly independent and after normalizing the resulting orthogonal basis to an orthonormal basis, the output of this algorithm is an orthonormal basis as produced also by the Gram-Schmidt process.</p>
-
-<p>(…)</p>
 
 <div class="num_lemma" id="LUDecompositionOfPositiveSemidefiniteMatrices">
 <h6 id="lemma">Lemma</h6>
@@ -674,9 +672,9 @@ margin-left: 0em;
 <div class="num_remark">
 <h6 id="remark_2">Remark</h6>
 
-<p>That the matrix <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> in Prop. <a class="maruku-ref" href="#OrthogonalBasisOfLinearSpanByLUDecomposition"></a> is <a class="existingWikiWord" href="/nlab/show/lower+triangular+matrix">lower triangular</a> and <a class="existingWikiWord" href="/nlab/show/invertible+matrix">invertible</a> (by Lemma <a class="maruku-ref" href="#LUDecompositionOfPositiveSemidefiniteMatrices"></a>) means that its <a class="existingWikiWord" href="/nlab/show/inverse+matrix">inverse matrix</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>L</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">L^{-1}</annotation></semantics></math> is also a <a class="existingWikiWord" href="/nlab/show/lower+triangular+matrix">lower triangular matrix</a> which reflects a process of <span class="newWikiWord">row reduction<a href="/nlab/new/row+reduction">?</a></span> from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>A</mi> <mi>T</mi></msup><mo>⋅</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">A^T \cdot A</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>U</mi></mrow><annotation encoding="application/x-tex">U</annotation></semantics></math>.</p>
+<p>That the matrix <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> in Prop. <a class="maruku-ref" href="#OrthogonalBasisOfLinearSpanByLUDecomposition"></a> is <a class="existingWikiWord" href="/nlab/show/lower+triangular+matrix">lower triangular</a> and <a class="existingWikiWord" href="/nlab/show/invertible+matrix">invertible</a> (by Lemma <a class="maruku-ref" href="#LUDecompositionOfPositiveSemidefiniteMatrices"></a>) means that its <a class="existingWikiWord" href="/nlab/show/inverse+matrix">inverse matrix</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>L</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">L^{-1}</annotation></semantics></math> is also a <a class="existingWikiWord" href="/nlab/show/lower+triangular+matrix">lower triangular matrix</a> which reflects a process of <a class="existingWikiWord" href="/nlab/show/row+reduction">row reduction</a> from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>A</mi> <mi>T</mi></msup><mo>⋅</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">A^T \cdot A</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>U</mi></mrow><annotation encoding="application/x-tex">U</annotation></semantics></math>.</p>
 
-<p>Accordingly, the orthogonalization in Prop. <a class="maruku-ref" href="#OrthogonalBasisOfLinearSpanByLUDecomposition"></a> may be understood as applying <span class="newWikiWord">Gauss elimination<a href="/nlab/new/Gauss+elimination">?</a></span> to</p>
+<p>Accordingly, the orthogonalization in Prop. <a class="maruku-ref" href="#OrthogonalBasisOfLinearSpanByLUDecomposition"></a> may be understood as applying <a class="existingWikiWord" href="/nlab/show/Gauss+elimination">Gauss elimination</a> to</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">[</mo><msup><mi>A</mi> <mi>T</mi></msup><mo>⋅</mo><mi>A</mi><mo stretchy="false">|</mo><msup><mi>A</mi> <mi>T</mi></msup><mo maxsize="1.2em" minsize="1.2em">]</mo><mspace width="thickmathspace"></mspace><mo>↦</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">[</mo><msup><mover><mi>Q</mi><mo>^</mo></mover> <mi>T</mi></msup><mo maxsize="1.2em" minsize="1.2em">]</mo></mrow><annotation encoding="application/x-tex">
   \big[A^T \cdot A \vert A^T \big]
   \;\mapsto\;
@@ -804,7 +802,7 @@ margin-left: 0em;
 <li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Gram%E2%80%93Schmidt_process">Gram-Schmidt process</a></em></li>
 </ul>
 
-<p>The process via Gaussian elimination is due to</p>
+<p>The formulation via Gaussian elimination is due to</p>
 
 <ul>
 <li id="PursellTrimble91">Lyle Pursell, S. Y. Trimble, <em>Gram-Schmidt orthogonalization by Gauss Elimination</em>, The American Mathematical Monthly Vol. 98, No. 6 (1991), pp. 544-549 (<a href="https://www.jstor.org/stable/2324877">jstor:2324877</a>)</li>
@@ -815,14 +813,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 31, 2018 at 06:51:15.
+  Last revised on December 31, 2018 at 07:38:24.
   See the <a href="https://ncatlab.org/nlab/history/Gram-Schmidt process" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gram-Schmidt+process" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gram-Schmidt+process/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/Gram-Schmidt+process" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gram-Schmidt+process" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gram-Schmidt+process" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gram-Schmidt+process/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Gram-Schmidt+process" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gram-Schmidt+process" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gram-Schmidt process/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
