--- a/pages/20020.html
+++ b/pages/20020.html
@@ -324,7 +324,7 @@ margin-left: 0em;
 
 <p><h2 id='section_Idea'>Idea</h2></p>
 
-<p>A <em>rotation permutation</em> is, roughly speaking, a <a class="existingWikiWord" href="/nlab/show/permutation">permutation</a> in which, if we view the elements of a finite set as people standing in a circle, everybody shifts one step to the right, or everybody shifts one step to the left. It is an example of a <span class="newWikiWord">cyclic permutation<a href="/nlab/new/cyclic+permutation">?</a></span>.</p>
+<p>A <em>rotation permutation</em> is, roughly speaking, a <a class="existingWikiWord" href="/nlab/show/permutation">permutation</a> in which, if we view the elements of a finite set as people standing in a circle, everybody shifts a given number of steps to the right, or everybody shifts a given number of steps to the left. It is an example of a <a class="existingWikiWord" href="/nlab/show/cyclic+permutation">cyclic permutation</a>.</p>
 
 <p><h2 id='section_Formal_definition'>Formal definition</h2></p>
 
@@ -646,14 +646,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 31, 2018 at 04:00:08.
+  Last revised on December 31, 2018 at 09:28:02.
   See the <a href="https://ncatlab.org/nlab/history/rotation permutation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/rotation+permutation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rotation+permutation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/rotation+permutation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rotation+permutation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/rotation+permutation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rotation+permutation/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/rotation+permutation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rotation+permutation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/rotation permutation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
