--- a/pages/20026.html
+++ b/pages/20026.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      pure spinor in nLab
+      Carlos Mafra in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      pure spinor
+      Carlos Mafra
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9416/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,69 +309,65 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
 <ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
-
-<h2 id="idea">Idea</h2>
-
-<p>A <em>pure spinor</em> is a <a class="existingWikiWord" href="/nlab/show/spinors">spinors</a> with vanishing <a href="spin+representation#SuperPoincareBrackets">spinor-to-vector pairing</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mover><mi>ψ</mi><mo>¯</mo></mover><msup><mi>Γ</mi> <mi>a</mi></msup><mi>ψ</mi><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mn>0</mn><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
-  \overline{\psi} \Gamma^a \psi \;=\; 0
-  \,.
-
-</annotation></semantics></math></div>
-<h2 id="references">References</h2>
-
-<p>See also</p>
-
-<ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Pure_spinor">Pure spinor</a></em></li>
+<li><a href="https://www.southampton.ac.uk/maths/about/staff/crm1n16.page">webpage</a></li>
 </ul>
 
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/superstring+scattering+amplitudes">superstring scattering amplitudes</a> in terms of pure spinors:</p>
+<h2 id="selected_writings">selected writings</h2>
 
 <ul>
-<li>
+<li id="MafraSchlotterer18a">
 <p><a class="existingWikiWord" href="/nlab/show/Carlos+Mafra">Carlos Mafra</a>, <a class="existingWikiWord" href="/nlab/show/Oliver+Schlotterer">Oliver Schlotterer</a>, <em>Towards the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point one-loop superstring amplitude I: Pure spinors and superfield kinematics</em> (<a href="https://arxiv.org/abs/1812.10969">arXiv:1812.10969</a>)</p>
 </li>
 
-<li>
+<li id="MafraSchlotterer18b">
 <p><a class="existingWikiWord" href="/nlab/show/Carlos+Mafra">Carlos Mafra</a>, <a class="existingWikiWord" href="/nlab/show/Oliver+Schlotterer">Oliver Schlotterer</a>, <em>Towards the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point one-loop superstring amplitude II: Worldsheet functions and their duality to kinematics</em> (<a href="https://arxiv.org/abs/1812.10970">arXiv:1812.10970</a>)</p>
 </li>
 
-<li>
+<li id="MafraSchlotterer18c">
 <p><a class="existingWikiWord" href="/nlab/show/Carlos+Mafra">Carlos Mafra</a>, <a class="existingWikiWord" href="/nlab/show/Oliver+Schlotterer">Oliver Schlotterer</a>, <em>Towards the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point one-loop superstring amplitude III: One-loop correlators and their double-copy structure</em> (<a href="https://arxiv.org/abs/1812.10971">arXiv:1812.10971</a>)</p>
 </li>
 </ul>
-</body></html>
+
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/superstring+scattering+amplitudes">superstring scattering amplitudes</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/KLT+relations">KLT relations</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pure+spinor">pure spinor</a></p>
+</li>
+</ul>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 31, 2018 at 16:29:15.
-  See the <a href="https://ncatlab.org/nlab/history/pure spinor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December 31, 2018 at 16:31:04.
+  See the <a href="https://ncatlab.org/nlab/history/Carlos Mafra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pure+spinor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pure+spinor/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/pure+spinor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pure+spinor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/pure spinor/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Carlos+Mafra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Carlos Mafra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/pure+spinor" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Carlos+Mafra" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/pure+spinor" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Carlos+Mafra" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/pure+spinor" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Carlos+Mafra" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
