--- a/pages/9881.html
+++ b/pages/9881.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -977,6 +977,7 @@ margin-left: 0em;
 <li><a href='#References'>References</a></li>
 <ul>
 <li><a href='#General'>General</a></li>
+<li><a href='#superstring_scattering'>Superstring scattering</a></li>
 <li><a href='#higher_order_corrections'>Higher order corrections</a></li>
 <li><a href='#ReferencesOnFiniteness'>On finiteness</a></li>
 <ul>
@@ -1025,7 +1026,7 @@ margin-left: 0em;
 
 <h3 id="openclosed_scattering_duality_and_klt_relations">Open-closed scattering duality and KLT relations</h3>
 
-<p>The <a class="existingWikiWord" href="/nlab/show/open%2Fclosed+string+duality">open/closed string duality</a> implies certain relations in string scattering amplitudes that in the point-particle limit induces relations between <a class="existingWikiWord" href="/nlab/show/scattering+amplitudes">scattering amplitudes</a> in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> and in <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>. These are the <em><a class="existingWikiWord" href="/nlab/show/KLT+relations">KLT relations</a></em> in <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a>.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/open%2Fclosed+string+duality">open/closed string duality</a> implies certain relations in string scattering amplitudes that in the point-particle limit induces relations between <a class="existingWikiWord" href="/nlab/show/scattering+amplitudes">scattering amplitudes</a> in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> and in <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>. These are the <em><a class="existingWikiWord" href="/nlab/show/KLT+relations">KLT relations</a></em> in <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a>. See in particular <a href="#MafraSchlotterer18a">Mafra-Schlotterer 18a</a>, <a href="#MafraSchlotterer18b">Mafra-Schlotterer 18b</a>, <a href="#MafraSchlotterer18c">Mafra-Schlotterer 18c</a>.</p>
 
 <h3 id="twistor_string_amplitudes_and_mhv_amplitudes_in_yangmills_theory">Twistor string amplitudes and MHV amplitudes in Yang-Mills theory</h3>
 
@@ -1075,7 +1076,7 @@ margin-left: 0em;
 
 <h3 id="General">General</h3>
 
-<p>A comprehensive account of the superstring <a class="existingWikiWord" href="/nlab/show/S-matrix">S-matrix</a> may be obtained from combining the general idea presented in</p>
+<p>A comprehensive account of the <a class="existingWikiWord" href="/nlab/show/superstring">superstring</a> <a class="existingWikiWord" href="/nlab/show/S-matrix">S-matrix</a> may be obtained from combining the general idea presented in</p>
 
 <ul>
 <li id="Polchinski01"><a class="existingWikiWord" href="/nlab/show/Joseph+Polchinski">Joseph Polchinski</a>, section 12.5 of vol 2 of <em>String theory</em>, Cambridge Monographs on Mathematical Physics (2001)</li>
@@ -1105,35 +1106,61 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Survey of the presence and role of divergencies includes</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Ashoke+Sen">Ashoke Sen</a>, <em>Ultraviolet and Infrared Divergences in Superstring Theory</em> (<a href="http://arxiv.org/abs/1512.00026">arXiv:1512.00026</a>)</li>
-</ul>
-
 <p>See also</p>
 
 <ul>
 <li id="Moore93"><a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <em>Symmetries of the Bosonic String S-Matrix</em> (<a href="https://arxiv.org/abs/hep-th/9310026">arXiv:hep-th/9310026</a>)</li>
 </ul>
 
-<p>Discussion of superstring scattering amplitudes in terms of <a class="existingWikiWord" href="/nlab/show/pure+spinors">pure spinors</a>:</p>
+<p>For more references see also at <em><a class="existingWikiWord" href="/nlab/show/string+theory+results+applied+elsewhere">string theory results applied elsewhere</a></em>.</p>
+
+<h3 id="superstring_scattering">Superstring scattering</h3>
+
+<p>A review of superstring scattering amplitudes is in the last section of (<a href="#StaessensVernocke10">Staessens-Vernocke 10</a>). A general discussion of the problem of superstring amplitudes is in</p>
 
 <ul>
 <li>
-<p>Carlos R. Mafra, Oliver Schlotterer, <em>Towards the n-point one-loop superstring amplitude I: Pure spinors and superfield kinematics</em> (<a href="https://arxiv.org/abs/1812.10969">arXiv:1812.10969</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Eric+D%27Hoker">Eric D'Hoker</a><a class="existingWikiWord" href="/nlab/show/Duong+Phong">Duong Phong</a>, <em>Loop amplitudes for the fermionic string</em>, Nucl. Phys. B 278 (1986) 225;</p>
 </li>
 
 <li>
-<p>Carlos R. Mafra, Oliver Schlotterer, <em>Towards the n-point one-loop superstring amplitude II: Worldsheet functions and their duality to kinematics</em> (<a href="https://arxiv.org/abs/1812.10970">arXiv:1812.10970</a>)</p>
-</li>
-
-<li>
-<p>Carlos R. Mafra, Oliver Schlotterer, <em>Towards the n-point one-loop superstring amplitude III: One-loop correlators and their double-copy structure</em> (<a href="https://arxiv.org/abs/1812.10971">arXiv:1812.10971</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Greg+Moore">Greg Moore</a>, P. Nelson, <a class="existingWikiWord" href="/nlab/show/Joseph+Polchinski">Joseph Polchinski</a>, <em>Strings and supermoduli</em>, Phys. Lett. B 169 (1986) 47-53.</p>
 </li>
 </ul>
 
-<p>For more references see also at <em><a class="existingWikiWord" href="/nlab/show/string+theory+results+applied+elsewhere">string theory results applied elsewhere</a></em>.</p>
+<p>See also</p>
+
+<ul>
+<li>Corinne de Lacroix, Harold Erbin, <a class="existingWikiWord" href="/nlab/show/Ashoke+Sen">Ashoke Sen</a>, <em>Analyticity and Crossing Symmetry of Superstring Loop Amplitudes</em> (<a href="https://arxiv.org/abs/1810.07197">arXiv:1810.07197</a>)</li>
+</ul>
+
+<p>Survey of the presence and role of divergences includes</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Ashoke+Sen">Ashoke Sen</a>, <em>Ultraviolet and Infrared Divergences in Superstring Theory</em> (<a href="http://arxiv.org/abs/1512.00026">arXiv:1512.00026</a>)</li>
+</ul>
+
+<p>Discussion of superstring scattering amplitudes in terms of <a class="existingWikiWord" href="/nlab/show/pure+spinors">pure spinors</a> with emphasis on <a class="existingWikiWord" href="/nlab/show/KLT+relations">KLT relations</a> is in</p>
+
+<ul>
+<li id="MafraSchlotterer18a">
+<p><a class="existingWikiWord" href="/nlab/show/Carlos+Mafra">Carlos Mafra</a>, <a class="existingWikiWord" href="/nlab/show/Oliver+Schlotterer">Oliver Schlotterer</a>, <em>Towards the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point one-loop superstring amplitude I: Pure spinors and superfield kinematics</em> (<a href="https://arxiv.org/abs/1812.10969">arXiv:1812.10969</a>)</p>
+</li>
+
+<li id="MafraSchlotterer18b">
+<p><a class="existingWikiWord" href="/nlab/show/Carlos+Mafra">Carlos Mafra</a>, <a class="existingWikiWord" href="/nlab/show/Oliver+Schlotterer">Oliver Schlotterer</a>, <em>Towards the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point one-loop superstring amplitude II: Worldsheet functions and their duality to kinematics</em> (<a href="https://arxiv.org/abs/1812.10970">arXiv:1812.10970</a>)</p>
+</li>
+
+<li id="MafraSchlotterer18c">
+<p><a class="existingWikiWord" href="/nlab/show/Carlos+Mafra">Carlos Mafra</a>, <a class="existingWikiWord" href="/nlab/show/Oliver+Schlotterer">Oliver Schlotterer</a>, <em>Towards the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point one-loop superstring amplitude III: One-loop correlators and their double-copy structure</em> (<a href="https://arxiv.org/abs/1812.10971">arXiv:1812.10971</a>)</p>
+</li>
+</ul>
+
+<p>For more see also at <em><a class="existingWikiWord" href="/nlab/show/superstring+field+theory">superstring field theory</a></em>, such as</p>
+
+<ul>
+<li>Corinne de Lacroix, Harold Erbin, Sitender Pratap Kashyap, <a class="existingWikiWord" href="/nlab/show/Ashoke+Sen">Ashoke Sen</a>, Mritunjay Verma, <em>Closed Superstring Field Theory and its Applications</em>, International Journal of Modern Physics AVol. 32, No. 28n29, 1730021 (2017) (<a href="https://arxiv.org/abs/1703.06410">arXiv:1703.06410</a>)</li>
+</ul>
 
 <h3 id="higher_order_corrections">Higher order corrections</h3>
 
@@ -1166,18 +1193,6 @@ margin-left: 0em;
 </ul>
 
 <h4 id="superstring">Superstring</h4>
-
-<p>A review is in the last section of (<a href="#StaessensVernocke10">Staessens-Vernocke 10</a>). A general discussion of the problem of superstring amplitudes is in</p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Eric+D%27Hoker">Eric D'Hoker</a><a class="existingWikiWord" href="/nlab/show/Duong+Phong">Duong Phong</a>, <em>Loop amplitudes for the fermionic string</em>, Nucl. Phys. B 278 (1986) 225;</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Greg+Moore">Greg Moore</a>, P. Nelson, <a class="existingWikiWord" href="/nlab/show/Joseph+Polchinski">Joseph Polchinski</a>, <em>Strings and supermoduli</em>, Phys. Lett. B 169 (1986) 47-53.</p>
-</li>
-</ul>
 
 <p>Finiteness of heterotic and type II superstring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point functions in flat spacetime is argued for in</p>
 
@@ -1332,14 +1347,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 31, 2018 at 12:13:08.
+  Last revised on December 31, 2018 at 16:27:27.
   See the <a href="https://ncatlab.org/nlab/history/string scattering amplitude" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+scattering+amplitude/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/string+scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+scattering+amplitude/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/string+scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string scattering amplitude/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
