--- a/pages/1504.html
+++ b/pages/1504.html
@@ -1482,6 +1482,18 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ashoke+Sen">Ashoke Sen</a>, <em>Background Independence of Closed Superstring Field Theory</em>, JHEP02(2018)155 (<a href="https://arxiv.org/abs/1711.08468">arXiv:1711.08468</a>)</p>
+</li>
+
+<li>
+<p>Corinne de Lacroix, Harold Erbin, Sitender Pratap Kashyap, <a class="existingWikiWord" href="/nlab/show/Ashoke+Sen">Ashoke Sen</a>, Mritunjay Verma, <em>Closed Superstring Field Theory and its Applications</em>, International Journal of Modern Physics AVol. 32, No. 28n29, 1730021 (2017) (<a href="https://arxiv.org/abs/1703.06410">arXiv:1703.06410</a>)</p>
+</li>
+</ul>
+
 <p>For previous constructions, the introduction of</p>
 
 <ul>
@@ -1903,14 +1915,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 20:58:15.
+  Last revised on December 31, 2018 at 16:17:41.
   See the <a href="https://ncatlab.org/nlab/history/string field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+field+theory/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/string+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+field+theory/56" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(56 revisions)</span> | <a href="/nlab/show/diff/string+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
