--- a/pages/3156.html
+++ b/pages/3156.html
@@ -616,6 +616,8 @@ margin-left: 0em;
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/algebraic+model+category">algebraic model category</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/accessible+model+category">accessible model category</a></li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -663,14 +665,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 19:18:45.
+  Last revised on December 31, 2018 at 19:33:58.
   See the <a href="https://ncatlab.org/nlab/history/algebraic weak factorization system" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/algebraic+weak+factorization+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/algebraic+weak+factorization+system/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/algebraic+weak+factorization+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/algebraic+weak+factorization+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/algebraic+weak+factorization+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/algebraic+weak+factorization+system/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/algebraic+weak+factorization+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/algebraic+weak+factorization+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/algebraic weak factorization system/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
