--- a/pages/19844.html
+++ b/pages/19844.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9141/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9141/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1097,9 +1097,23 @@ margin-left: 0em;
 
 <p>In the current <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> the <a class="existingWikiWord" href="/nlab/show/fundamental+particles">fundamental particles</a> in the three <a class="existingWikiWord" href="/nlab/show/generations+of+fermions">generations of fermions</a> have identical properties from one generation to the next, except for their <a class="existingWikiWord" href="/nlab/show/mass">mass</a>. A possible violation of this state of affairs is called a <em>flavor anomaly</em>, a sign of “new physics” beyond the standard model.</p>
 
-<p>Indications of flavour anomalies have been observed consistently and with increasing <a class="existingWikiWord" href="/nlab/show/statistical+significance">statistical significance</a> around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>3</mn></mrow><annotation encoding="application/x-tex">3</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/standard+deviations">σ</a> in <a class="existingWikiWord" href="/nlab/show/B+meson">B meson</a> processes in various <a class="existingWikiWord" href="/nlab/show/experiments">experiments</a> at the <a class="existingWikiWord" href="/nlab/show/LHC">LHC</a> (see references <a href="#References">below</a>).</p>
+<p>Indications of flavour anomalies have been observed consistently and with increasing <a class="existingWikiWord" href="/nlab/show/statistical+significance">statistical significance</a> around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>3</mn></mrow><annotation encoding="application/x-tex">3</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/standard+deviations">σ</a> in <a class="existingWikiWord" href="/nlab/show/B+meson">B meson</a> <a class="existingWikiWord" href="/nlab/show/scattering+amplitude">processes</a> in various <a class="existingWikiWord" href="/nlab/show/experiments">experiments</a> at the <a class="existingWikiWord" href="/nlab/show/LHC">LHC</a> (see references <a href="#References">below</a>).</p>
+<div style="text-align: center">
+<img src="https://ncatlab.org/nlab/files/bsllprocesses.jpg" width="570" />
+</div>
+<blockquote>
+<p>graphics grabbed from <a href="#Cartelle18">Cartelle 18</a></p>
+</blockquote>
+<div style="float:right;margin:0 10px 10px 0;">
+<img src="https://ncatlab.org/nlab/files/FlavourAnomalyAt4Sigma.jpg" width="320" />
+</div>
+<p>The global tension with the standard model by end of 2018 is around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>4.1</mn></mrow><annotation encoding="application/x-tex">4.1</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/standard+deviations">σ</a> (<a href="#StrumiaEtAl17">Strumia et al. 17</a>, <a href="#Cartelle18">Cartelle 18, slide 22/25</a>, <a href="#Dey18">Dey 18, slide 16/23</a>, <a href="#HAMN18">HAMN 18, p. 4</a>).</p>
 
-<p>The global tension with the standard model as of summer 2018 is around <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>4.1</mn></mrow><annotation encoding="application/x-tex">4.1</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/standard+deviations">σ</a> (<a href="#StrumiaEtAl17">Strumia et al. 17</a>, <a href="#Cartelle18">Cartelle 18, slide 22/25</a>, <a href="#Dey18">Dey 18, slide 16/23</a>, <a href="#HAMN18">HAMN 18, p. 4</a>). If the ongoing evaluation of the data of LHC’s Run 2 (to be completed by end of 2018) confirms the measurements of Run 1, then the <a class="existingWikiWord" href="/nlab/show/statistical+significance">statistical significance</a> of the effect should have reached 5 <a class="existingWikiWord" href="/nlab/show/standard+deviations">σ</a> (<a href="#Cerri18">Cerri et al. 18, p. 12</a>) and hence officially count as detection of flavour anomaly, which would make it the first established “new physics” seen at the <a class="existingWikiWord" href="/nlab/show/LHC">LHC</a>.</p>
+<p>If the ongoing evaluation of the data of <a class="existingWikiWord" href="/nlab/show/LHC">LHC</a>‘s Run 2 confirms the measurements of Run 1, then the <a class="existingWikiWord" href="/nlab/show/statistical+significance">statistical significance</a> of the effect should have reached 5 <a class="existingWikiWord" href="/nlab/show/standard+deviations">σ</a> (<a href="#Cerri18">Cerri et al. 18, p. 12</a>) and hence officially count as detection of flavour anomaly, which would make it the first established “new physics” seen at the <a class="existingWikiWord" href="/nlab/show/LHC">LHC</a>.</p>
+
+<blockquote>
+<p>graphics grabbed from <a href="#Dey18">Dey 18</a></p>
+</blockquote>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -1240,14 +1254,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 02:07:36.
+  Last revised on January  1, 2019 at 07:58:52.
   See the <a href="https://ncatlab.org/nlab/history/flavour anomaly" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/flavour anomaly/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
